# RustProject

./: .gitignore  Cargo.toml  README.md  index.html  style.css
src/: Api.rs  main.rs  rootcode.rs
templates/: index.tera
