[package]
name = "RustFrontEnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = "0.3.45"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
plotters = "0.3.5"
rand = "^0.8.5"

#tokio = { version = "^1.19", features = ["full"] }
